force-app/main/default/objects/QCP_Pricing_Lookup__c/QCP_Pricing_Lookup__c.object-meta.xml
<CustomObject>
    <description>This table holds the pricing information for the products based on term and quantity</description>
    <label>QCP Pricing Lookup</label>
    <nameField>
        <label>QCP Pricing Lookup</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QCP Pricing Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>