force-app/main/default/objects/QCP_Pricing_Lookup__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <label>Pricebook</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01s50000000UJDsAAO</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>01s50000000UJDwAAO</fullName>
                <label>Developed</label>
            </value>
            <value>
                <fullName>01s50000000UJDvAAO</fullName>
                <label>Emerging</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>