force-app/main/default/objects/QCP_Pricing_Lookup__c/fields/Quantity_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Lower_Bound__c</fullName>
    <label>Quantity Lower Bound</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>