force-app/main/default/objects/QCP_Pricing_Lookup__c/fields/Quantity_Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Upper_Bound__c</fullName>
    <label>Quantity Upper Bound</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>