force-app/main/default/objects/QCP_Pricing_Lookup__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <label>Subscription Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>