force-app/main/default/objects/QCP_Pricing_Lookup__c/fields/Unit_Price_NC__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_NC__c</fullName>
    <label>Unit Price NC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>