force-app/main/default/objects/QCP_Pricing_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Quantity_Lower_Bound__c</columns>
    <columns>Quantity_Upper_Bound__c</columns>
    <columns>Subscription_Term__c</columns>
    <columns>Pricebook__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_Price_NC__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>