force-app/main/default/objects/QCP_Pricing_Lookup__c/listViews/USD_Currency.listView-meta.xml
<ListView>
    <fullName>USD_Currency</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Pricebook__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Quantity_Lower_Bound__c</columns>
    <columns>Quantity_Upper_Bound__c</columns>
    <columns>Subscription_Term__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_Price_NC__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>USD Currency</label>
    <language>en_US</language>
</ListView>